methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:5: error: Unit does not take parameters
niche()
     ^MethodsDogHouse:6: error: Unit does not take parameters
niche() 
     ^MethodsDogHouse:12: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:18: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:38: error: not found: value dogHouse
		dogHouse();		
                ^