methods.basics.MethodsDogHouse.scala.code
def niche {
  for(n <- 1 to 4) {avance();avance();gauche()}
}

niche()
niche()